<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <!-- See https://github.com/xtext/maven-xtext-example
         and https://www.eclipse.org/Xtext/documentation/350_continuous_integration.html
     -->
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.lflang</groupId>
    <artifactId>lf</artifactId>
    <version>0.3.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Lingua Franca</name>

    <properties>
        <!-- Version Properties -->
        <!-- Sync with build.gradle -->
        <commonsCliVersion>1.4</commonsCliVersion>
        <!-- Note that this version is tied to our version of Gradle -->
        <kotlinVersion>1.6.20</kotlinVersion>

        <!-- Eclipse specific components -->
        <!-- Important: Any version specified for these plugins must be available via the update sites listed in the target platform definition. If not, the Epoch build will fail! You can find the target platform definition in org.lflang.targetplatform/org.lflang.targetplatform.target. Changes to the target platform should also be transferred to the oomph setup (oomph/LinguaFranca.setup). -->
        <runtimeVersion>3.25.0</runtimeVersion> <!-- This version reflects the actual Eclipse release (e.g. 3.25 -> 2022-06) -->
        <xtextVersion>2.27.0</xtextVersion>
        <lsp4jVersion>0.14.0</lsp4jVersion> <!-- This plugin is provided by Xtext -->
        <mwe2LaunchVersion>2.13.0</mwe2LaunchVersion> <!-- This plugin is provided by Eclipse, not Xtext -->

        <!-- Tycho version used by Maven (Eclipse specific build support)-->
        <tychoVersion>2.6.0</tychoVersion>

        <!-- Maven only properties -->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <execMavenPluginVersion>3.0.0</execMavenPluginVersion>

        <!-- Non-version properties -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <tycho.disableP2Mirrors>true</tycho.disableP2Mirrors>
    </properties>

    <profiles>
        <profile>
            <id>product</id>

            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <modules>
                <module>org.lflang</module>
                <module>org.lflang.ide</module>
                <module>org.lflang.ui</module>
                <module>org.lflang.diagram</module>
                <!-- Tests -->
                <module>org.lflang.tests</module>
                <module>org.lflang.ui.tests</module>
                <!-- Eclipse Product -->
                <module>org.lflang.sdk</module>
                <module>org.lflang.updatesite</module>
                <module>org.lflang.product</module>
                <module>org.lflang.rca</module>
                <module>org.lflang.targetplatform</module>
            </modules>
        </profile>
        <profile>
            <id>lds</id>

            <modules>
                <module>org.lflang</module>
                <module>org.lflang.ide</module>
                <module>org.lflang.diagram</module>

                <module>org.lflang.lds</module>
                <module>org.lflang.targetplatform</module>
            </modules>
        </profile>
    </profiles>
    <pluginRepositories>
        <pluginRepository>
            <id>tycho-staged</id>
            <url>https://oss.sonatype.org/content/repositories/orgeclipsetycho-1070</url>
        </pluginRepository>
    </pluginRepositories>

    <build>

        <pluginManagement>

            <plugins>

                <!-- This plugin sets the version of the current project and child projects with the same version, and updates references as necessary.-->
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-versions-plugin</artifactId>
                    <version>${tychoVersion}</version>
                </plugin>

                <!-- This plugin helps finding the latest plugin or dependency versions for your modules. Open up the terminal and execute this command to find the plugin versions you have to update:
                mvn versions:display-plugin-updates -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <generateBackupPoms>false</generateBackupPoms>
                    </configuration>
                </plugin>


                <!-- xtend-maven-plugin is in pluginManagement instead of in plugins
                     so that it doesn't run before the exec-maven-plugin's *.mwe2 gen; this way
                     we can list it after. -->

                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <version>${kotlinVersion}</version>
                    <executions>
                        <execution>
                            <id>kotlin-compile</id>
                            <phase>process-sources</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                            <configuration>
                                <srcDirs>
                                    <sourceDir>${project.basedir}/src</sourceDir>
                                    <sourceDir>${project.basedir}/src-gen</sourceDir>
                                    <sourceDir>${project.basedir}/xtend-gen</sourceDir>
                                </srcDirs>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-compiler-plugin</artifactId>
                    <version>${tychoVersion}</version>
                    <executions>
                        <execution>
                            <id>default-compile</id>
                            <phase>compile</phase>
                        </execution>
                    </executions>
                </plugin>

                <!-- <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <release>17</release>
                    </configuration>
                </plugin> -->

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>2.5</version>
                    <executions>
                        <execution>
                            <id>gen-clean</id>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                            <configuration>
                                <filesets>
                                    <fileset>
                                        <directory>${basedir}/xtend-gen</directory>
                                    </fileset>
                                </filesets>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>

            </plugins>

        </pluginManagement>

        <plugins>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-versions-plugin</artifactId>
                <version>${tychoVersion}</version>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tychoVersion}</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-source-plugin</artifactId>
                <version>${tychoVersion}</version>
                <executions>
                    <execution>
                        <id>plugin-source</id>
                        <goals>
                            <goal>plugin-source</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-surefire-plugin</artifactId>
                <version>${tychoVersion}</version>
                <configuration>
                    <argLine>-ea</argLine>
                    <includes>
                        <include>**/Test*.java</include>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tychoVersion}</version>
                <configuration>
                    <!-- See https://www.eclipse.org/tycho/sitedocs/target-platform-configuration/target-platform-configuration-mojo.html#pomDependencies   -->
                    <!-- This puts the kotlin osgi bundle into the target platform. -->
                    <pomDependencies>consider</pomDependencies>
                    <target>
                        <artifact>
                            <groupId>org.lflang</groupId>
                            <artifactId>org.lflang.targetplatform</artifactId>
                            <version>${project.version}</version>
                        </artifact>
                    </target> 
                    <executionEnvironment>JavaSE-17</executionEnvironment>    
                    <environments>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                </configuration>
            </plugin>

        </plugins>

    </build>

</project>
